2004-04-30  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc (octave_base_stream::clearerr): New function.
	(octave_stream::clearerr): New function.
	(seek (long, int)): Call clearerr here.
	* oct-stdstrm.h (octave_stdiostream::clear): New function.
	* c-file-ptr-stream.h (c_file_ptr_buf::clear,
	i_c_file_ptr_stream::clear, o_c_file_ptr_stream::clear,
	io_c_file_ptr_stream::clear): New functions.

2004-04-29  David Bateman  <dbateman@free.fr>

	* load-save.cc (Fload, Fsave): Accept -mat as well as -mat-binary.

2004-04-27  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/sort.cc: Add missing "class" keywords to template
	instantiations.

2004-04-22  John W. Eaton  <jwe@octave.org>

	* pt-plot.cc (Fclearplot): Temporarily turn off automatic_replot.
	Clear display after resetting title, labels, etc.

2004-04-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-colon.cc (tree_colon_expression::rvalue): Also check for
	error_state after evaluating each subexpression.

2004-04-22  David Bateman  <dbateman@free.fr>

	* ov-base-scalar.h (octave_base_scalar<ST>::permute): New function.

	* ov-base-mat.cc (octave_base_matrix<MT>::is_true): Make N-d aware.

2004-04-22  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc (printf_value_cache::curr_value): Now NDArray.
	(printf_value_cache::double_value): Extract N-d array, not Matrix.

2004-04-21  John W. Eaton  <jwe@octave.org>

	* parse.y (function2): Pass id name to frob_function.  Delete id.
	(frob_function): Accept function name instead of identifier.
	Don't try to rename symbol table entry.  Lookup symbol record for
	function name here.  Insert name in symbol table if needed.
	Operate on symbol record instead of identifier.

2004-04-21  David Bateman  <dbateman@free.fr>

	* DLD_FUNCTIONS/fft.cc(do_fft): Correctly initialize the variable dim
	for scalar arguments.

	* DLD-FUNCTIONS/minmax.cc: Handle single vector arg correctly.

2004-04-20  John W. Eaton  <jwe@octave.org>
